--- a/.github/workflows/main_jspapp123.yml
+++ b/.github/workflows/main_jspapp123.yml
@@ -20,12 +20,12 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: '11'
-
+          distribution: 'adopt'
       - name: Build with Maven
         run: mvn clean install
 
       - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: java-app
           path: '${{ github.workspace }}/target/*.war'
