--- a/.github/workflows/main_jspapp123.yml
+++ b/.github/workflows/main_jspapp123.yml
@@ -21,8 +21,9 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
+
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn clean install -f MyWebApp/pom.xml
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
