--- a/.github/workflows/main_jspapp123.yml
+++ b/.github/workflows/main_jspapp123.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: java-app
+          name: MyWebApp
           path: '${{ github.workspace }}/target/*.war'
 
   deploy:
@@ -42,7 +42,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: java-app
+          name: MyWebApp
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
