--- a/.github/workflows/main_jspapp123.yml
+++ b/.github/workflows/main_jspapp123.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: MyWebApp
-          path: '${{ github.workspace }}/target/*.war'
+          path: '${{ github.workspace }}'
 
   deploy:
     runs-on: ubuntu-latest
