--- a/MyWebApp/src/main/webapp/WEB-INF/web.xml
+++ b/MyWebApp/src/main/webapp/WEB-INF/web.xml
@@ -1,42 +1,7 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE web-app PUBLIC
+ "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+ "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
-<head>
-    <title>HTML Login Form</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-    <div class="main">
-        <h1>GeeksforGeeks</h1>
-        <h3>Enter your login credentials</h3>
-
-        <form action="">
-            <label for="first">
-                Username:
-            </label>
-            <input type="text" id="first" name="first" 
-                placeholder="Enter your Username" required>
-
-            <label for="password">
-                Password:
-            </label>
-            <input type="password" id="password" name="password" 
-                placeholder="Enter your Password" required>
-
-            <div class="wrap">
-                <button type="submit">
-                    Submit
-                </button>
-            </div>
-        </form>
-        
-        <p>Not registered?
-            <a href="#" style="text-decoration: none;">
-                Create an account
-            </a>
-        </p>
-    </div>
-</body>
-
-</html>
+<web-app>
+  <display-name>Archetype Created Web Application</display-name>
+</web-app>
